logs_old/ContextualCVC5Pipeline_Logs/AtomicHashMap2_pipeline.log

========================================
         Starting Pipeline for: AtomicHashMap2 (Mode: ContextualCVC5)
========================================
Initializing pipeline for benchmark: 'AtomicHashMap2'
   -> Loading and validating attributes from: /Dualis/scripts/../benchmarks/Contextual/AtomicHashMap2/Attributes.txt
      -> Validation successful. Attribute file is consistent.
Total External Iterations: 0
Total Unique Test Cases Found: 0

==================== Iteration: 1 ====================
TIMEOUT : 20
   -> Parsing SYGUS file: /Dualis/scripts/../benchmarks/ContextualCVC5_working_temp/AtomicHashMap2/AtomicHashMap2.sy
   -> Starting CVC5 with a 1000-second timeout...
      -> Logging CVC5 output to iter_1.log
   -> CVC5 completed successfully.
   -> Writing new specs to harness: AtomicHashMap2_fuzz.cpp...
      -> Successfully created working copy '/Dualis/scripts/../benchmarks/ContextualCVC5_working_temp/AtomicHashMap2/AtomicHashMap2_fuzz.cpp'.
   -> Starting AFL++(AtomicHashMap2_fuzz) with a 20-second timeout...
   -> Building AFL-instrumented binary: /Dualis/scripts/../benchmarks/ContextualCVC5_working_temp/AtomicHashMap2/AtomicHashMap2_fuzz
   -> ERROR: Failed to build AFL binary: /Dualis/scripts/../benchmarks/ContextualCVC5_working_temp/AtomicHashMap2/AtomicHashMap2_fuzz.cpp:47:27: error: use of undeclared identifier 'containsk1'
      bool expr_insert = (containsk1 == containsk);
                          ^
/Dualis/scripts/../benchmarks/ContextualCVC5_working_temp/AtomicHashMap2/AtomicHashMap2_fuzz.cpp:47:41: error: use of undeclared identifier 'containsk'
      bool expr_insert = (containsk1 == containsk);
                                        ^
2 errors generated.


==================== Finalizing Pipeline ====================

====================== Pipeline Finished =====================
Total External Iterations: 1
Total Unique Test Cases Found: 0
pipeline.run() took 0.0044 seconds.
Running command: /usr/bin/python3 chcverifynfuzz.py ContextualCVC5 AtomicHashMap2
PID: 24
========================================


Total Pipeline Duration: 1.70s
